[package]
name = "demultiplex"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
seq-io = "0.3"
bio = "1.5"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
flate2 = { version = "1.0", features = ["multi"] }
anyhow = "1.0"
num_cpus = "1.16"
