[package]
name = "demultiplex"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "*", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
seq_io = "*"
flate2 = "*"
anyhow = "*"
bio = "*"
rayon = "*"
block-aligner = { version = "0.5", default-features = false, features = ["simd_avx2"] }
num_cpus = "*"
